# Adversarial-Setting

./: .gitignore  .pre-commit-config.yaml  ERM.py  Readme.md  erm_data_generation.py  experiment_information.py  helpers.py  plot_template.ipynb  pyproject.toml  setup.py  state_evolution.py  version.py
DataModel/: data_model.py  dataset.py  util.py
Evaluate/: HighAlphaSweep.ipynb  defence_sweep.ipynb  defence_sweep_fgm.ipynb  effective_regularization.ipynb  expansion.ipynb  feature_combinations.ipynb  feature_combinations_fgm.ipynb  feature_combinations_new.ipynb  gen_optimal_lambda.ipynb  gen_optimal_lambda_alpha.ipynb  optimal_defense.ipynb  overlap_scalings.ipynb  pca_experiments.ipynb  powerlaw.ipynb  powerlaw_beta.ipynb  sweep_rob_usefulness.ipynb  sweep_sigma_w.ipynb  uniion_two_plots.ipynb
erm/: errors.py  optimize.py  prediction.py
erm/problems/: coefficient_logistic_problem.py  logistic_fgm_problem.py  logistic_problem.py  perturbed_logistic_problem.py  problems.py
experiments/: create_data_model.py  data_loading.py  define_experiment.ipynb  experiment_setup.py  run.sh  sweep.py
hooks/: bump-version.sh
model/: data.py  dataset.py
numerics/: brentq.c  helpers.py  proximal.py
state_evolution/: constants.py  iteration.py  logistic_integrals.py  observables.py  overlaps.py  proximal.py
state_evolution/logistic/: logistic_integrals.py  observables.py
state_evolution/logistic_fgm/: logistic_fgm_integrals.py  observables_fgm.py
sweep/: experiment.py  helpers.py  run_sweep.py  sweep.py
sweep/results/: erm.py  optimal_lambda.py  result.py  state_evolution.py
tests/: data_model_test.py  dataset_test.py
tests/erm/: test_prediction.py
tests/model/: test_data_model.py  test_dataset.py
util/: serialisation.py  task.py
